Bug 1723469 Part 1: Prevent large background images from using opacity flattening. r=aosmond,emilio

This prevents opacity from being set on large images sent to WebRender.
Instead, opacity will be handled in the parent layer, which is less efficient,
but correct for these large images.

This can be a temporary fix until WR supports opacity on arbitrarily large
images.

Differential Revision: https://phabricator.services.mozilla.com/D137360